# LaneMate_Provider

./: CMakeLists.txt  README.md  me_orders.dart  pubspec.yaml
android/: build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
assets/images/: boy_bile.avif
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/klu_page/: Earnings.dart  Orders.dart  constants.dart  document_submission.dart  home.dart  init.dart  login.dart  navigation.dart  passenger_details_page.dart  passenger_orders.dart  profile.dart  ride_status.dart  seat_layout.dart  signup.dart  vehicle_selection.dart
lib/pages/: Earnings.dart  Orders.dart  OrdersSam.dart  constants.dart  document_submission.dart  home.dart  init.dart  login.dart  navigation.dart  passenger_details_page.dart  passenger_orders.dart  profile.dart  ride_status.dart  seat_layout.dart  signup.dart  vehicle_selection.dart
lib/services/: auth_service.dart  klu_ride_service.dart  location_manager.dart  location_service.dart  orders_service.dart  ride_service.dart  user_service.dart  wallet_service.dart
lib/utils/: map_utils.dart
lib/widgets/: ride_map.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
